RESOLVED FIXED193412
Correctly handle rotation for local video playback
https://bugs.webkit.org/show_bug.cgi?id=193412
Summary Correctly handle rotation for local video playback
youenn fablet
Reported 2019-01-14 15:06:45 PST
We regressed rotation handling for local play back
Attachments
Patch (4.56 KB, patch)
2019-01-14 15:31 PST, youenn fablet
no flags
youenn fablet
Comment 1 2019-01-14 15:31:43 PST
youenn fablet
Comment 2 2019-01-14 15:36:54 PST
WebKit Commit Bot
Comment 3 2019-01-15 13:21:09 PST
Comment on attachment 359084 [details] Patch Clearing flags on attachment: 359084 Committed r240000: <https://trac.webkit.org/changeset/240000>
WebKit Commit Bot
Comment 4 2019-01-15 13:21:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.